--- a/travel-unravel_Final/css/style.css
+++ b/travel-unravel_Final/css/style.css
@@ -979,42 +979,20 @@ padding: 8px 12px !important; background: #fff; font-family: 'Poppins-Regular'; 
 /* END JQUERY_UI */
 
 
-
-
-/* START AboutPageMain */
-.AboutPageMain { overflow: hidden; position: relative; padding: 80px 0 70px; }
-.aboutPageRight h2 {
-    color: #000;
-    font-size: 42px;
-    line-height: 56px;
-    margin-bottom: 20px;
-    font-family: 'DMSans-Bold';
-    -webkit-font-smoothing: antialiased;
-    position: relative;
-    z-index: 1;
-}
-.aboutPageLeftInner img.about_2 { position: absolute; left: -34px; top: -34px; width: auto; height: auto; width: 164px; }
-.aboutPageRight { position: relative; margin: 0 0 30px; top: 50px; }
-.aboutPageRight .headingOther { margin: 0 0 20px; }
-.aboutPageRight p { color: #000; font-size: 16px; line-height: 22px; margin: 0 0 30px; }
-.aboutPageRight ul { margin: 0 0 20px; padding-left: 35px; display: inline-block; width: 100%;}
-.aboutPageRight ul li { list-style: none; margin: 0 0 20px; position: relative; font-size: 16px; line-height: 22px; }
-.aboutPageRight ul li::before {
-    color: #fff;
-    left: -30px;
-    position: absolute;
-    top: 11px;
-    background: #000;
-    width: 20px;
-    height: 1px;
-    line-height: 24px;
-    text-align: center;
-    content: "";
-}
-.aboutPageLeft { position: relative; margin: 0 0 30px; text-align: left; padding-left: 50px; }
-.aboutPageLeftInner { width: 460px; position: relative; display: inline-block; }
-.aboutPageLeftInner img { width: 100%; margin: 0; position: relative; height: 100%; }
-/* END AboutPageMain */
+/* START aboutPageMain */
+.aboutPageMain { overflow: hidden; position: relative; padding: 80px 0 70px; }
+.aboutPageMain .about_Img { position: absolute; right: 0; top: 0;}
+.aboutPageLeft h2 { color: #000; font-size: 42px; line-height: 56px; margin-bottom: 20px; font-family: 'DMSans-Bold'; -webkit-font-smoothing: antialiased; position: relative; z-index: 1;}
+.aboutPageLeft { position: relative; margin: 0 0 30px; }
+.aboutPageLeft .headingOther { margin: 0 0 20px; }
+.aboutPageLeft p { color: #000; font-size: 16px; line-height: 22px; margin: 0 0 30px; }
+.aboutPageLeft ul { margin: 0 0 20px; padding-left: 35px; display: inline-block; width: 100%;}
+.aboutPageLeft ul li { list-style: none; margin: 0 0 20px; position: relative; font-size: 16px; line-height: 22px; }
+.aboutPageLeft ul li::before { color: #fff; left: -30px; position: absolute; top: 11px; background: #000; width: 20px; height: 1px; line-height: 24px; text-align: center; content: "";}
+.aboutPageRight { position: relative; margin: 0 0 30px; text-align: left; padding-left: 50px; }
+.aboutPageRightInner { width: 460px; position: relative; display: inline-block; }
+.aboutPageRightInner img { width: 100%; margin: 0; position: relative; height: 100%; }
+/* END aboutPageMain */
 
 
 /* START missionMain */
@@ -1022,40 +1000,18 @@ padding: 8px 12px !important; background: #fff; font-family: 'Poppins-Regular'; 
 .missionMain .headingOther { margin: 0 0 40px; }
 .missionMain .headingOther h2 { margin: 0 0 20px; }
 .missionInner { padding: 0; }
-.missionInner  h2 {
-    color: #000;
-    font-size: 42px;
-    line-height: 56px;
-    margin-bottom: 20px;
-    font-family: 'DMSans-Bold';
-    -webkit-font-smoothing: antialiased;
-    position: relative;
-    z-index: 1;
-}
+.missionInner  h2 {  color: #000;  font-size: 42px; line-height: 56px; margin-bottom: 20px; font-family: 'DMSans-Bold';
+-webkit-font-smoothing: antialiased; position: relative; z-index: 1;}
 .missionInner h4 { color: #000; font-size: 20px; line-height: 26px; margin: 0 0 15px; }
 .missionInner p { margin: 0 0 30px; font-size: 16px; line-height: 22px; }
-
 /* END missionMain */
 
 
-
-
-
 /* START staticsMain */
-.statsMain {
-    background-color: #f8f4e1;
-    background-image: radial-gradient(#cfc69e 0.5px, #f8f4e1 0.5px);
-    background-size: 10px 10px;
-    box-shadow: 3px 15px 70px 0 rgb(0 0 0 / 20%);
-    width: 100%;
-    padding: 0;
-    position: relative;
-    overflow: hidden;
-}
-
+.statsMain { background-color: #f8f4e1; background-image: radial-gradient(#cfc69e 0.5px, #f8f4e1 0.5px);  background-size: 10px 10px; 
+box-shadow: 3px 15px 70px 0 rgb(0 0 0 / 20%);  width: 100%;  padding: 0; position: relative;  overflow: hidden;}
 .staticsOuter { display: flex; flex-wrap: wrap; gap: 0; }
 .staticsInner { margin: 0; position: relative; width: 25%; padding: 40px 45px 40px; }
 .staticsInner h4 { color: #000; margin: 0 0 10px; font-family: 'Poppins-Medium';}
-.staticsInner p { color: #8CC05E; font-size: 42px; line-height: 56px; margin: 0 0 10px; font-family: 'Poppins-Regular'; }
-
+.staticsInner p { color: #8CC05E; font-size: 42px; line-height: 56px; margin: 0; font-family: 'Poppins-Regular'; }
 /* END staticsMain */
