--- a/travel-unravel_Final/css/style.css
+++ b/travel-unravel_Final/css/style.css
@@ -1090,11 +1090,10 @@ text-decoration: none; transition: all 0.3s ease-in-out 0s; position: relative; 
 
 
 /* START termsMain */
-.termsMain { overflow: hidden; position: relative; padding: 80px 0; }
+.termsMain { overflow: hidden; position: relative; padding: 80px 0 40px; }
 .terms { margin: 0; }
 .terms h2 { color: #000; font-size: 42px; line-height: 56px; margin: 0 0 30px; font-family: 'DMSans-Bold'; position: relative; }
 .termsInner { margin: 0 0 50px; display: inline-block; width: 100%; }
-.termsInner:last-child { margin: 0; }
 .termsInner h3 { color: #000; font-size: 30px; line-height: 40px;margin: 0 0 30px; font-family: 'Poppins-Medium'; }
 .termsInner h4 { color: #000; font-size: 20px; line-height: 26.6px; margin: 0 0 15px; font-family: 'Poppins-Medium'; }
 .termsInner h5 { color: #000; font-size: 16px; line-height: 21.3px; margin: 0 0 15px; font-family: 'Poppins-Medium'; }
@@ -1189,3 +1188,21 @@ box-shadow: 3px 15px 70px 0 rgb(0 0 0 / 20%);  width: 100%;  padding: 0; positio
 .staticsInner h4 { color: #000; margin: 0 0 10px; font-family: 'Poppins-Medium';}
 .staticsInner p { color: #8CC05E; font-size: 42px; line-height: 56px; margin: 0; font-family: 'Poppins-Light'; }
 /* END staticsMain */
+
+/* START faq_section */
+.faq_section { background: #f7f7f7; overflow: hidden; position: relative; padding: 70px 0 70px; }
+.faq_content { margin: 0; }
+.faq_content .accordion-item { border: none; margin: 0 0 10px; }
+.faq_content .accordion-header { border: 1px solid #ddd;border-top: none;border-radius: 0 0 2px 2px;}
+.faq_content .accordion-button { background: linear-gradient(180deg, #f8f7f7 0%, #e8e8e8 100%); color: #000;font-size: 15px;line-height: 20px;font-family: 'Poppins-Regular';
+padding: 8px 15px;display: inline-block;width: auto;border-radius: 0;width: 100%;}
+.faq_content .accordion-button::after { content: "\e5cf"; font-family: 'Material Symbols Outlined'; font-weight: 300; margin-left: 2px; background: transparent; top: 8px; font-size: 24px; position: relative; }
+.faq_content .accordion-button:not(.collapsed)::after { background: transparent; content: "\e5ce"; font-family: 'Material Symbols Outlined'; font-weight: 300; }
+.faq_content .accordion-button:focus { border-color: none; box-shadow: none; }
+.faq_content .accordion-button:not(.collapsed) { color: #fff;  background: linear-gradient(180deg, #1aa9eb 0%, #0a91cf 100%); box-shadow: none; }
+.flightRight .accordion-body { background: #fcfcfc; padding: 10px; }
+/* END faq_section */
+
+
+
+
